# farascraper

./: .env.example  .gitignore  LICENSE  README.md  contributing.md  directory_structure.md  pyproject.toml  requirements.txt  setup.py  setup_pipeline.sh  test_setup.py
config/: __init__.py  settings.py  simple_settings.py
scripts/: process_enhanced_ocr.py  process_ocr.py  run_pipeline.py  setup_project.py  test_enhanced_extraction.py  test_scraper.py
src/common/: exceptions.py  logger.py
src/downloader/: download_manager.py  fara_scraper.py
src/ocr/: fara_ocr_clean.py
src/pipeline/: enhanced_fara_ocr.py  fara_ocr_clean.py  orchestrator.py  requirements.yaml
